[package]
name = "pi_worker"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]

[dependencies]
fnv = "1.0.6"
rand = "*"
threadpool = "*"
lazy_static = "*"
pi_atom = { path = "../pi_atom" }
pi_apm = { path = "../pi_apm" }
pi_timer = { path = "../pi_timer" }
pi_task_pool = { path = "../pi_task_pool" }
log = "0.4"